--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(135deg, #00b4db, #0083b0);
+  background: linear-gradient(135deg, #00b4dc, #0083b0);
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@ body {
 
 .container {
   text-align: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(234, 255, 255, 0.1);
   padding: 30px;
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(255,255,255,0.2);
@@ -38,3 +38,4 @@ button {
 button:hover {
   background-color: #ffcc00;
 }
+
