--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(135deg, #00b4dc, #0083b0);
+  background: linear-gradient(135deg, #e9e50e, #b0ad00);
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
@@ -11,10 +11,10 @@ body {
 
 .container {
   text-align: center;
-  background: rgba(234, 132, 123, 0.1);
+  background: rgba(245, 209, 9, 0.966);
   padding: 30px;
   border-radius: 20px;
-  box-shadow: 0 0 10px rgba(134,62,145,0.2);
+  box-shadow: 0 0 10px rgba(245, 8, 8, 0.959);
 }
 
 input {
@@ -27,7 +27,7 @@ input {
 }
 
 button {
-  background-color: #ffd700;
+  background-color: #0400ff;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
@@ -36,8 +36,5 @@ button {
 }
 
 button:hover {
-  background-color: #ffcc00;
+  background-color: #ff1e00;
 }
-
-
-
